force-app/main/default/objects/Contact/fields/AccountsName__c.field-meta.xml
<CustomField>
    <fullName>AccountsName__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account&apos;s Name</label>
    <type>Text</type>
</CustomField>