force-app/main/default/objects/Contact/fields/ContactSource__c.field-meta.xml
<CustomField>
    <fullName>ContactSource__c</fullName>
    <description>Feed by Lead conversion or manual creation or by Gainsight</description>
    <label>Contact Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aaaa</fullName>
            </value>
            <value>
                <fullName>bbbb</fullName>
            </value>
            <value>
                <fullName>cccc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>