force-app/main/default/objects/Contact/fields/ConvertedLeadId__c.field-meta.xml
<CustomField>
    <fullName>ConvertedLeadId__c</fullName>
    <label>ConvertedLeadId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>