force-app/main/default/objects/Contact/fields/EmailBouncedDate__c.field-meta.xml
<CustomField>
    <fullName>EmailBouncedDate__c</fullName>
    <description>Email Bounced date</description>
    <label>Email Bounced Date</label>
    <type>Date</type>
</CustomField>