force-app/main/default/objects/Contact/fields/Seniority__c.field-meta.xml
<CustomField>
    <fullName>Seniority__c</fullName>
    <description>Seniority of the contact</description>
    <label>Seniority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency/Partner</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>CXO - Board Member</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Senior Manager</fullName>
            </value>
            <value>
                <fullName>Student/Intern</fullName>
            </value>
            <value>
                <fullName>SVP / VP</fullName>
            </value>
            <value>
                <fullName>Individual Contributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>