force-app/main/default/objects/Contact/recordTypes/PartnerContact.recordType-meta.xml
<RecordType>
    <fullName>PartnerContact</fullName>
    <active>true</active>
    <description>Represent a Partner Contact</description>
    <label>Partner Contact</label>
</RecordType>